# ILuvCoconut

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/coconut-studio/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/coconut-studio/src/: canvasRenderer.ts  coconutVision.ts  detectedFrameActions.ts  dom.ts  exportPlan.ts  i18n.ts  (+22 more)
apps/coconut-studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/coconut-studio/src-tauri/src/: main.rs
apps/player-cocos/: README.md
apps/player-pixi/: index.html  package.json  vite.config.ts
crates/coconut-vision/: Cargo.toml
crates/coconut-vision-cli/: Cargo.toml
docs/: 00-visao-geral.md  01-arquitetura.md  02-renderers-pixi-cocos.md  03-performance-web.md  04-assets-e-bundles.md  05-cicd.md  06-configuracao-de-jogos.md  07-roadmap.md  08-fontes-e-pesquisa.md  09-links-de-referencia.md  10-boas-praticas.md  11-pipeline-de-assets-brutos.md  12-performance-assets-web.md  13-coconut-studio.md  14-organizacao-typescript.md  15-deteccao-inteligente-de-figuras.md  16-sdd-deteccao-figuras-coconut-studio.md  17-sdd-coconut-vision.md  18-guia-coconut-studio.md  19-ambiente-e-dependencias.md  20-sdd-montagem-slots-paytable-runtime.md
games/fruit-classic/: game.config.json  paytable.config.json  theme.config.json
infra/nginx/: default.conf
scripts/: clean.mjs
templates/slot-5x3-classic/: README.md
(+16 files in other folders)
