[workspace]
members = [
  "apps/coconut-studio/src-tauri",
  "crates/coconut-vision",
  "crates/coconut-vision-cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["ILuvCoconut"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
coconut-vision = { path = "crates/coconut-vision" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
thiserror = "2"
