[package]
name = "iluvcoconut-studio"
version.workspace = true
description = "ILuvCoconut Studio local shell"
authors.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
coconut-vision.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
